# AnadoluIsuzu-Cpp-May-2022

./: .gitignore  Links.txt
src/SampleCLionCpp/: AnalyticalCircle.hpp  Array.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Complex.cpp  Complex.hpp  Date.cpp  File.cpp  File.hpp  Fraction.cpp  Fraction.hpp  Point.cpp  Point.hpp  Sensor.cpp  Sensor.hpp  Unit.hpp  csdutil.c  fraction-todo.txt  main.cpp  mathutility.cpp  stdinutility.cpp  utility.cpp
src/SampleCLionCpp/company/: Employee.hpp  HumanResources.cpp  HumanResources.hpp  Manager.cpp  Manager.hpp  SalesManager.hpp  Worker.cpp  Worker.hpp  companyApp.cpp  companyApp.hpp
src/SampleCLionCpp/csd/: errorutil.h  errorutility.hpp  stdinutility.hpp  util.h  utility.hpp
src/SampleCLionCpp/game/: Card.hpp
src/SampleCLionCpp/parser/: FileSource.cpp  FindAlphabeticCountResetParser.cpp  FindAlphabeticCountResetParser.hpp  FindDigitsCountParser.cpp  FindDigitsCountParser.hpp  IParser.hpp  IReset.hpp  ISource.hpp  Parser.hpp  ResetParser.hpp  StdInSource.cpp  StdInSource.hpp  StringSource.cpp  StringSource.hpp  alphabeticcountapp.cpp
src/SampleClion/: AlertDialog.hpp  AnalyticalCircle.cpp  AnalyticalCircle.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Complex.cpp  File.cpp  Fraction.cpp  Fraction.hpp  Point.hpp  Sensor.cpp  Vector.hpp  csderrorutil.c  csderrorutility.cpp  csdnumeric.cpp  main.cpp  mathutility.hpp  utility.cpp
src/SampleClion/company/: Employee.cpp  Manager.hpp  SalesManager.cpp  Worker.hpp
src/SampleClion/csd/: numericutil.hpp  stdinutility.hpp  util.h  utility.hpp
src/SampleClion/game/: Card.cpp
(+84 files in other folders)
